# tauri-plugin-spreadsheet

./: Cargo.toml  LICENSE  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
src/: error.rs  lib.rs  spreadsheet.rs  state.rs  worksheet.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
