[package]
name = "tauri-plugin-spreadsheet"
version = "0.0.1"
authors = [ "lzhida" ]
description = "tauri plugin base on umya-spreadsheet"
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.0.5" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
umya-spreadsheet = "0.8.0"
